# mongo-to-parquet

./: .gitignore  README.md  config.json.example  main.py  pyproject.toml
src/mongodb_to_parquet/: main.py
