[project]
name = "mongodb-to-parquet"
version = "0.1.0"
description = "Copy mongodb data to parquet files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=21.0.0",
    "pymongo>=4.15.5",
]

[build-ssytem]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mongo-to-parquet = "mongodb_to_parquet.main:main"
